admin/admin-style/_admin-wrapper.scss
.admin-wrapper {
    height: auto;
    min-height: 100%;
    //overflow: scroll;
    position: relative;

    .admin-dashboard-wrapper {
        margin-left: 250px;
        height: 100%;
        width: 100%;

        .admin-dashboard-bottom {
            // height: 100%;
            height: calc(100vh - 70px);
        }

        .admin-left-card,
        .admin-right-card,
        .dashboard-wrapper-bottom {
            color: var(--color-light-grey);
        }

        form {
            height: 100%;

            select {
                border: none;
                padding: 10px;
                background-color: var(--admin-color-secondary);
                color: var(--color-light-grey);
                width: 100%;
            }
        }

        .dashboard-wrapper-bottom  {
            min-height: 300px;
        }
    }
}

